--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,28 @@
-// TODO
+.headerContainer {
+  height: 7rem;
+}
+
+.headerContent {
+  display: flex;
+  max-width: 720px;
+  height: 7rem;
+  margin: 0 auto;
+  padding: 2rem 0;
+
+  align-items: center;
+
+  img {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+  }
+
+  h2 {
+    color: var(--white-10);
+  }
+
+  span {
+    font-size: 2rem;
+    color: var(--purple-100);
+  }
+}
