--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,48 @@
-// TODO
+.homeContainer {
+  max-width: 720px;
+  padding-bottom: 5rem;
+  margin: 0 auto;
+}
+
+.homeContent {
+  max-width: 720px;
+  margin-bottom: 3rem;
+
+  h1 {
+    color: var(--white-10);
+    font-size: 1.75rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+  }
+
+  p {
+    color: var(--white-100);
+    font-size: 1.125rem;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
+  }
+
+  svg {
+    color: var(--white-300);
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.5rem;
+  }
+
+  time, span {
+    color: var(--white-300);
+    font-size: 1.142rem;
+    font-weight: 400;
+  }
+
+  span {
+    margin-left: 1.75rem;
+  }
+}
+
+.loadButton {
+  background: transparent;
+  border: 0;
+  color: var(--purple-100);
+  font-size: 1.125rem;
+}
