--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -8,7 +8,7 @@
   max-width: 720px;
   margin-bottom: 3rem;
 
-  h1 {
+  a {
     color: var(--white-10);
     font-size: 1.75rem;
     font-weight: 700;
