--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -6,9 +6,15 @@
 .postContainer {
   max-width: 720px;
   margin: 5rem auto;
+
+  article + article {
+    margin-top: 3rem;
+  }
 }
 
 .postHeader {
+  margin-bottom: 4rem;
+
   h1 {
     font-size: 3rem;
     font-weight: 700;
@@ -18,7 +24,7 @@
   address {
     display: flex;
     align-items: center;
-    margin: 1.5rem 0 4rem 0;
+    margin-top: 1.5rem;
 
     font-style: normal;
     font-weight: 400;
@@ -39,7 +45,15 @@
 .postContent {
   h2 {
     font-weight: 700;
-    // font-size: 1.125rem; //18px
+    font-size: 2.25rem; //36px
     line-height: normal;
+    margin-bottom: 3rem;
+  }
+
+  p {
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 140%;
+    color: var(--white-100);
   }
 }
