feat: Creating new components - Creating and styling commentary component - Injecting commentary component on post - Creating and styling previous and next post component

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -42,3 +42,16 @@
     }
   }
 }
+
+
+.divider {
+  height: 0;
+  margin: 3.75rem 0 3rem 0;
+  border: 1px solid var(--white-100);
+  filter: opacity(0.1);
+}
+
+.changeButtons {
+  display: flex;
+  justify-content: space-between;
+}
