feat(component): Creating new component LeavePreviewMode - Removing default from components

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -41,6 +41,14 @@
       margin-left: 1.5rem;
     }
   }
+
+  .edited {
+    display: flex;
+    margin-top: 1.125rem;
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--white-300);
+  }
 }
 
 
